--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,6 @@
 /* HEADER SECTION */
+
+
 *, *::before,*::after{
     box-sizing: border-box;
 }
@@ -8,7 +10,7 @@ body{
     width: 100vw;
      /* font-family: lato; */
   /* font-family: Alegreya; */
-  font-family: "lato", "Muli", "B612", serif;
+    font-family: "lato", "Muli", "B612", serif;
   /* font-family: "B612", sans-serif; */
   /* font-family: "Lato", sans-serif; */
   /* font-family: "Muli", sans-serif; */
@@ -63,24 +65,12 @@ body{
     height: 28px;
 }
 
-
-
-
 .hero_pic{
-    width: 40%;
+    width: 30%;
     display: inline-block;
 
 }
-.hero_pic img{
-    /* filter: brightness(50%);
-    border-top-left-radius: 50%;
-    border-top-right-radius:0%;
-    border-bottom-right-radius:50%;
-    border-bottom-left-radius:20%;
-    width: 100%;
-    height: auto; */
 
-}
 #hero_links li{
     padding: 4px;
     margin: 5px;
@@ -92,6 +82,7 @@ body{
     list-style-type:none;
     transition: background-color 1s ease;
 }
+
 /* ====================================================== */
 /* ANIMATIONS */
 #hero_links li:first-child{
@@ -164,9 +155,9 @@ body{
 /* ======================================================= */
 
 #hero_links li:hover{
-    background-color: #2c87f0;
+    background-color: #ff4208;
     color: #fff;
-    border: 1px solid #2c87f0;
+    border: 1px solid #fff;
     transition: background-color 1s ease;
 
 }
@@ -200,61 +191,51 @@ body{
 
 .Purpose,.Scope, .vision{
     border-radius: 2px;
-    text-align: center;
+    /* text-align: center; */
     margin-bottom: 50px;
+    z-index: 0;
 }
-.Purpose{
+.Purpose h2, .Scope h2{
     margin-top: 20px;
+    text-align: center;
 }
-.Scope{
-    margin-top: 20px;ls
-    
-
-
+.Purpose p, .Scope p{
+    text-align: center;
+}
+.container{
+    margin: 0 auto;
+    width: 90%;
 }
 .vision{
-    margin-top: 150px;
-    color: rgb(19, 0, 6);
+    margin-top: 100px;
+    color:#000;
+    text-align: justify;
 }
+
 .seven img{
-    width: 80%;
+    width: 100%;
     border-radius: 5%;
+    margin-left: 100px;
+
     /* height: 120vh; */
 }
 .style1{
     background:linear-gradient(rgba(0, 0, 0, 0.904), rgba(0, 0, 0, 0.897)), url(images/group.jpg);
-    margin: 50px 0 50px 0;
+    margin: 50px 0 100px 0;
     background-size: cover;
-    padding: 30px;
+    padding-bottom: 30px;
     color: #fff;
+    background-attachment: fixed;
 }
-
-
-
-.col-sm-4 img{
-    width: 10%;
-    height: 20%;
-    border-radius: 50%;
-}
-
-
 .music a{
     font-family: "Caveat", "lato", cursive;
     text-decoration: none;
     font-size: 18px;
     color: rgb(255, 66, 8);
 }
-.music2 section{
-    width: 50%;
-    display:inline-block
-}
-.music2 img{
-    width:90%;
-    height: 350px;
-    margin-top: 10px;
-}
+
 .first p{
-    text-align: center;
+    text-align: justify;
 }
 /* Music section */
 
@@ -272,17 +253,51 @@ body{
     float: right;
     border: 1px solid #fff;
     border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0);
-
-}
-.scrollnav{
+    background-color: #0000007a;
     animation-name: "scroll";
     -webkit-animation-name: scroll;
     animation-duration: 3s;
     animation-iteration-count: infinite;
     transition: background-color 1s linear;
     animation-delay: 1s;
+
 }
+.hiddennav{
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    /* padding: 4px; */
+    position: sticky;
+    top: 0;
+    z-index: 2;
+
+}
+.hiddennav ul{
+    width: 40%;
+    /* background-color: darkcyan; */
+    margin: 0 0 0 60%;
+}
+.hiddennav li{
+    display: inline-block;
+    margin: 6px 12px;
+    padding: 4px 8px;
+
+}
+.hiddennav a{
+    text-decoration: none;
+    color: #ffffff;    
+    padding: 14px 18px;
+    transition: 0.7s ease;
+
+
+}
+
+.hiddennav a:hover{
+    text-decoration: none;
+    color: #fff;
+    background-color: #ff4208;
+    transition: 0.7s ease;
+}
+
 @keyframes scroll{
     from{
         border-color: rgba(0, 0, 0, 0);
@@ -291,55 +306,149 @@ body{
         border-color: #2c87f0;
 }
 }
-.music h1{
-    text-align: center;
-    margin-bottom: 50px;
 
-}
-.music2{
-    margin-top: 100px;
-    text-align:center;
-    
-}
 .container2{
-    width: 60%;
-    margin: 0 auto;
-}
-.container2 img{
-    width: 90%;
-    padding: 1px;
-    border-radius: 2px;
-    transition: 0.7s ease-in-out;
-    transform: scale(1.0);
-
-}
-.container2 img:hover{
-    background-color: red;
-    transform: scale(1.05);
-    transition: 0.7s;
-
+    width: 100%;
+    background:linear-gradient(rgba(0, 0, 0, 0.904), rgba(0, 0, 0, 0.897)), url(images/thehila.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    /* background-size: cover; */
+    background-size: 100% 90%;
+    background-repeat:no-repeat ;
+    /* padding: 5px; */
+    margin: 100px auto;
+   
 }
 .container2 .row{
     margin-top: 100px;
     border-radius: 200px;
+}
 
+.thehila-concert{
+    position: relative;
+    /* width: 100%; */
+    transform: scale(1);
+    /* background-color: darkgoldenrod; */
+    /* z-index: 2; */
+}
+.thehila-concert:hover{
+    /* z-index: 3; */
+}
+.thehila-concert img{
+    /* background-color: darkgoldenrod; */
+    width: 100%;
+    z-index: 3;
+    height: 80%;
+    border-radius: 1%;
+    transition: 1s ease;
+}
+.thehila-concert img:hover{
+    /* filter: blur(1px); */
+    filter: brightness(20%);
+    transition: 0.7s ease;
+    transform: scale(0.5);
 
 }
+.thehila-concert p{
+    position: absolute;
+    top: 30%;
+    color: #fff;
+    text-align: center;
+    width: 100%;
+    padding: 30px;
+    margin: 0 auto;
+    z-index: -1;
+    background: #00000071;
+}
+.quotes{
+    text-align: center;
+    margin-top: 10%;
+}
+
+.frames{
+    width: 80%;
+    margin: 0 auto;
+    border-radius: 0;
+    z-index: -1;
+    /* background-color: #000; */
+}
+
+iframe{
+    width: 100%;
+    margin: 0 0 20px 0;
+    /* height: auto; */
+    /* background-color: #ff4208; */
+}
+.col-md-3 p{
+    color: #fff;
+    text-align: center;
+    margin: 0 0 100px 0;
+}
+
+
 /* Developer section */
 .developer h1{
     text-align: center;
     margin-top: 50px;
 }
 .developer p{
-    text-align: center;
+    text-align: justify;
 }
 
 /* Follow me Section*/
 .writeme h1{
     text-align: center;
-    margin: 50px 0;
+    margin: 50px 0 50px 0;
 }
 
+label{
+    display: block;
+}
+textarea{
+    width: 100%;
+    outline: none;
+    border: 1px solid #8f8e8e;
+    border-radius: 1%;
+    margin: 20px 0 0 0;
+}
+input{
+    display: block;
+    width: 100%;
+    border: none;
+    border-bottom: 1px solid #8f8e8e;
+    margin: 20px 0 12px 0;
+    outline: none;
+    font-size: 18px;
+    transition: 0.7s ease-out;
+}
+input:hover{
+    border-bottom: 1px solid #ff4208;
+
+}
+input:last-child{
+    border: 1px solid #2c87f0;
+    width: 30%;
+    border-radius: 2%;
+    margin: 10px auto 50px auto;
+    /* background: #ff4208; */
+    color: #000;
+    transition: 0.7s ease-out;
+    padding: 4px;
+
+}
+input:last-child:hover{
+    background: #ff4208;
+    color: #fff;
+    transition: 0.7s;
+    border: 1px solid #ff4208;
+
+
+}
+form{
+    width: 50%;
+    margin: 0 auto;
+    /* background: #1da1f2; */
+}
 /* Footer section  */
 footer{
     background:linear-gradient(rgba(0, 0, 0, 0.938), rgba(0, 0, 0, 0.911)), url(images/group.jpg);
@@ -347,6 +456,9 @@ footer{
     margin-bottom: 0;
     border-top-left-radius: 10%;
     border-top-right-radius: 10%;
+    /* position: fixed; */
+    bottom: 0;
+    /* width: 100%; */
 
 }
 .foot{
@@ -427,22 +539,40 @@ footer h2::after{
     color:#ff0000;
     border-radius: 100%;
 }
-@media(max-width:1000px){
+/* ============================================================================================ */
+                /* CV SECTION */
+/* ============================================================================================ */
+.headerimage img{
+    width: 10%;
+    margin-top: 50px;
+    /* height: 200px; */
+    border-radius: 50%;
+}
+.details{
+    margin-top: 20px;
+}
+.Edu h1, .prof h1{
+    text-align: center;
+}
+
+
+@media all and (max-width:1000px){
     .hero_pic{
         margin-top: 100px;
         width: 40%;
         display: inline-block;
     
     }
-    .music2 section{
-        width: 48%;
-        display:inline-block
+    .vision{
+        margin-top: 0;
+        color:#000;
+        text-align: justify;
     }
-    .music2 img{
-        width:90%;
-        height: 300px;
-        margin-top: 120px;
+    .quotes{
+        text-align: center;
+        margin-top: 0;
     }
+
     .col-sm-4 img{
         width: 10%;
         height: 20%;
@@ -455,6 +585,14 @@ footer h2::after{
         margin: 0 0px;
         float: right;
         border: 1px solid #fff;
+        background-color: #000;
+    }
+    .hiddennav{
+        visibility: hidden;
+    }
+    form{
+        width: 80%;
+        /* background-color: #dd33ff; */
     }
     .foot{
         width: 50%;
@@ -471,26 +609,26 @@ footer h2::after{
     }
 
    
-@media(max-width:820px){
+@media all and (max-width:820px){
     .col-sm-6 img{
         width: 100%;
         display: inherit;
         margin-top:90px;
-        height:350px;        
+        height:350px;
     }
-    .music2 section{
-        width: 48%;
-        display:inline-block
+    .thehila-concert img{
+        width: 100%;
+        height: auto;
     }
-    .music2 img{
-        width:90%;
-        height: 200px;
-        margin-top: 120px;
+    .quotes{
+        text-align: center;
+        margin-top: 10%;
     }
+  
 }
 
 
-@media(max-width:720px){
+@media all and (max-width:720px){
     /* body{
         background-color: #000;
     } */   
@@ -511,26 +649,23 @@ footer h2::after{
         text-align: center;
         margin-bottom: 50px;
     }
-    .col-sm-4{
-        display: block;
+
+    .thehila-concert img{
+        width: 100%;
+        height: auto;
+    }
+    .quotes{
+        text-align: center;
+        margin-top: 5%;
+    }
+    form{
+        width: 80%;
+        /* background-color: #dd33ff; */
+    }
+    .hiddennav{
+        display: none;
     }
     
-    .music2{
-        width: 100%;
-        margin-top: 0 auto;
-    }
-    .music2 section{
-        width: 100%;
-        display:block;
-        text-align: center;
-    }
-    .music2 img{
-        width:100%;
-        height:auto;
-        margin: 0 auto;
-        margin-bottom: 50px;
-    }
-
     footer{
         background:linear-gradient(rgba(0, 0, 0, 0.938), rgba(0, 0, 0, 0.911)), url(images/group.jpg);
         background-size: cover;
@@ -544,11 +679,8 @@ footer h2::after{
         width: 80%;
     }
     footer div{
-        /* width: 1%; */
         padding: 5px;
         display: inline-block;
-        /* text-align: center; */
-        /* background-color: #2c87f0; */
     }
     footer li{
         text-decoration: none;
@@ -587,7 +719,7 @@ footer h2::after{
 /* ================================================ */
             /* PHONES */
 /* ================================================ */
-@media(max-width:480px){
+@media all and (max-width:480px){
     .carousel-caption{
         left: 20px;
         top: 20%;
@@ -600,7 +732,12 @@ footer h2::after{
         display: initial;
     }
     .vision{
-        margin-top: 0;
+        margin: 0 auto;
+        text-align: justify;
+        width: 80%;
+    }
+    .vision h2{
+        text-align: center;
     }
    
     .style1{
@@ -608,13 +745,22 @@ footer h2::after{
         margin: 50px 0 50px 0;
         background-size: cover;
         background-position-x:center;
+        background-attachment: fixed;
+
         padding: 30px;
         color: #fff;
     }
     .seven img{
         display: none;
     }
- 
+    
+    form{
+        width: 90%;
+        /* background-color: #dd33ff; */
+    }
+    .hiddennav{
+        display: none;
+    }
     .music2{
         width: 100%;
         margin-top: 60px;
@@ -633,7 +779,10 @@ footer h2::after{
         margin: 0 auto;
         margin-bottom: 50px;
     }
-
+    form{
+        width: 90%;
+        /* background-color: #dd33ff; */
+    }
     .foot{
         margin: 0 auto;
         width: 100%;
