--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,7 +7,8 @@
 body{
     font-family: 'Lato', sans-serif;
     overflow-x: hidden;
-    width: 100vw;
+    /* width: 100%; */
+
      /* font-family: lato; */
   /* font-family: Alegreya; */
     font-family: "lato", "Muli", "B612", serif;
@@ -15,6 +16,145 @@ body{
   /* font-family: "Lato", sans-serif; */
   /* font-family: "Muli", sans-serif; */
 }
+
+/* ================================Page Preloader */
+
+  .preload {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
+    height: 100%;
+    background-color: #2c87f0;
+    background-color: #fff;
+  }
+  .lds-roller {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50px, -50%);
+  }
+  
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    /* background: #fff; */
+    background-color: #2c87f0;
+
+    margin: -4px 0 0 -4px;
+  }
+  
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+
+h1{
+    font-size: 32px;
+    /* text-align: center; */
+}
+h2{
+    font-size: 28px;
+}
+.maincontent{
+    display: none;
+    /* visibility: hidden; */
+}
+
+
+
+
 .carousel-item img{
     width: 100%;
     height: 110vh;
@@ -98,7 +238,7 @@ body{
         background-color: none;
     }
     to{
-        background-color: #2c87f0;
+        background-color: #2c87fh10;
 }
 }
 #hero_links li a:first-child{
@@ -176,6 +316,7 @@ body{
 .aboutme h1{
     text-align: center;
     margin: 80px 0;
+
 }
 .aboutme h1::after, .music h1::after,
 .writeme h1::after, .developer h1::after{
@@ -233,6 +374,9 @@ body{
     font-size: 18px;
     color: rgb(255, 66, 8);
 }
+.music h1{
+    text-align: center;
+}
 
 .first p{
     text-align: justify;
@@ -262,41 +406,7 @@ body{
     animation-delay: 1s;
 
 }
-.hiddennav{
-    background-color: rgb(0, 0, 0);
-    width: 100%;
-    /* padding: 4px; */
-    position: sticky;
-    top: 0;
-    z-index: 2;
 
-}
-.hiddennav ul{
-    width: 40%;
-    /* background-color: darkcyan; */
-    margin: 0 0 0 60%;
-}
-.hiddennav li{
-    display: inline-block;
-    margin: 6px 12px;
-    padding: 4px 8px;
-
-}
-.hiddennav a{
-    text-decoration: none;
-    color: #ffffff;    
-    padding: 14px 18px;
-    transition: 0.7s ease;
-
-
-}
-
-.hiddennav a:hover{
-    text-decoration: none;
-    color: #fff;
-    background-color: #ff4208;
-    transition: 0.7s ease;
-}
 
 @keyframes scroll{
     from{
@@ -331,9 +441,7 @@ body{
     /* background-color: darkgoldenrod; */
     /* z-index: 2; */
 }
-.thehila-concert:hover{
-    /* z-index: 3; */
-}
+
 .thehila-concert img{
     /* background-color: darkgoldenrod; */
     width: 100%;
@@ -342,13 +450,7 @@ body{
     border-radius: 1%;
     transition: 1s ease;
 }
-.thehila-concert img:hover{
-    /* filter: blur(1px); */
-    filter: brightness(20%);
-    transition: 0.7s ease;
-    transform: scale(0.5);
 
-}
 .thehila-concert p{
     position: absolute;
     top: 30%;
@@ -402,24 +504,26 @@ iframe{
 }
 
 label{
-    display: block;
-}
+    /* display: block; */
+    margin-top: 10px;}
 textarea{
     width: 100%;
     outline: none;
     border: 1px solid #8f8e8e;
     border-radius: 1%;
     margin: 20px 0 0 0;
+    text-align: center;
 }
 input{
     display: block;
     width: 100%;
     border: none;
     border-bottom: 1px solid #8f8e8e;
-    margin: 20px 0 12px 0;
+    /* margin: 0px 0 80px 0; */
     outline: none;
-    font-size: 18px;
-    transition: 0.7s ease-out;
+    font-size: 16px;
+    transition: all 0.7s ease-out;
+    margin: 1px;
 }
 input:hover{
     border-bottom: 1px solid #ff4208;
@@ -638,7 +742,7 @@ footer h2::after{
         width: 100%;
     }
     .container2{
-        width: 80%;
+        width: 95%;
         margin: 0 auto;
         background-color: #fff;
         display: none;
@@ -720,9 +824,17 @@ footer h2::after{
             /* PHONES */
 /* ================================================ */
 @media all and (max-width:480px){
+
+    .carousel-item img{
+        width: 100%;
+        height: 90vh;
+        filter: brightness(25%);
+        border-bottom-right-radius: 0%;
+        border-bottom-left-radius: 50%;
+    }
     .carousel-caption{
         left: 20px;
-        top: 20%;
+        top: 5%;
         width: 100%;
     }
     .col-sm-4 img{
@@ -734,7 +846,7 @@ footer h2::after{
     .vision{
         margin: 0 auto;
         text-align: justify;
-        width: 90%;
+        width: 95%;
     }
     .vision h2{
         text-align: center;
@@ -746,7 +858,6 @@ footer h2::after{
         background-size: cover;
         background-position-x:center;
         background-attachment: fixed;
-
         padding: 30px;
         color: #fff;
     }
