--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,8 +18,54 @@ body{
 }
 
 /* ================================Page Preloader */
+ .preload {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99;
+    height: 100%;
+    background-color: #2c87f0;
+  }
 
-  .preload {
+.lds-ripple {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50px, -50%);
+  }
+  .lds-ripple div {
+    position: absolute;
+    border: 4px solid #fff;
+    opacity: 1;
+    border-radius: 50%;
+    animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+
+@keyframes lds-ripple {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
+  }
+  
+  /* .preload {
     position: absolute;
     top: 0;
     left: 0;
@@ -28,8 +74,8 @@ body{
     height: 100%;
     background-color: #2c87f0;
     background-color: #fff;
-  }
-  .lds-roller {
+  } */
+/*.lds-roller {
     display: inline-block;
     width: 80px;
     height: 80px;
@@ -51,7 +97,7 @@ body{
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    /* background: #fff; */
+    /* background: #fff;
     background-color: #2c87f0;
 
     margin: -4px 0 0 -4px;
@@ -138,7 +184,7 @@ body{
       transform: rotate(360deg);
     }
   }
-  
+   */
 
 h1{
     font-size: 32px;
